tests/paczka1/fuzzy1/71549584.err
Error in line 2: mQ5wpK4Io A977 37,0
Error in line 3: Bl9CLt9Nd S137 61,3
Error in line 20: vI3MEYh5cDC A610 18,6
